--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,17 @@
 /*Header y Footer en App.jsx*/
-.app {
+/* .app {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Ocupa como mínimo toda la altura de la pantalla */
-}
+  min-height: 100vh; /* Ocupa como mínimo toda la altura de la pantalla 
+}*/
 
-.app__main {
+/* .app__main {
   flex-grow: 1; 
+} */ 
+
+/*root para responsive de Lyout*/
+#root {
+  display: flex;
+  flex-direction: column;
+  flex: 1; 
 }
