--- a/src/components/CatSlider/CatSlider.css
+++ b/src/components/CatSlider/CatSlider.css
@@ -3,12 +3,13 @@
   margin: 0 auto;
   padding: 20px;
   text-align: center;
+  margin-top: 20rem;
 }
 
 .slider-wrapper h1 {
   font-size: 2.5rem;
   color: #2c3e50;
-  margin-bottom: 30px;
+  margin-bottom: -30px;
   font-weight: 700;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
 }
