FIxed Slider padding

--- a/src/pages/MapPage/MapPage.css
+++ b/src/pages/MapPage/MapPage.css
@@ -1,7 +1,11 @@
 .map-page {
   width: 100%;
   min-height: 100vh;
-  background-image: url('/src/assets/background.png');
+  background-image: url(${bgImage});
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
