--- a/src/components/CatSlider/CatSlider.css
+++ b/src/components/CatSlider/CatSlider.css
@@ -3,10 +3,11 @@
   margin: 0 auto;
   padding: 20px;
   text-align: center;
-  margin-top: 20rem;
 }
 
 .slider-wrapper h1 {
+  margin: 0;
+  padding: 0;
   font-size: 2.5rem;
   color: #2c3e50;
   font-weight: 700;
