--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,5 +1,4 @@
 .home-page {
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,4 +7,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
+.content {
+  padding-top: 1px;
 }
