--- a/src/pages/AdoptPage/AdoptPage.css
+++ b/src/pages/AdoptPage/AdoptPage.css
@@ -16,18 +16,18 @@
   border-radius: 1rem;
 }
 
-.content p {
+/* .content p {
   font-weight: 200;
   font-size: 3rem;
   color: rgb(63, 63, 63);
   padding: 0;
   margin: 0;
-}
+} */
 
-.content img {
+/* .content img {
   max-width: 100%;
   height: 30rem;
-}
+} */
 
 @media (max-width: 600px) {
   .adopt-page .content p {
