fix(CAT-47): CTA and responsive fixed

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   flex-grow: 1; 
 } */ 
 
-/*root para responsive de Lyout*/
+/*root para responsive de Layout*/
 #root {
   display: flex;
   flex-direction: column;
