--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -59,21 +59,23 @@
   transition: filter 0.3s ease;
 }
 
-/* Botón para cambiar tema */
-.header__toggle-theme-button {
+/* Botón para camiar modo oscuro */
+.header__theme-icon {
+  background: none;
+  border: none;
+  font-size: 1.8rem;
   margin-left: 1rem;
-  padding: 0.3rem 0.6rem;
-  font-size: 0.9rem;
-  border: 1px solid #000;
-  border-radius: 6px;
-  background-color: transparent;
-  color: #000;
   cursor: pointer;
-  transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+  transition: transform 0.3s ease;
+  line-height: 1;
 }
 
-.header__toggle-theme-button:hover {
-  background-color: #ddd;
+.header__theme-icon:hover {
+  transform: scale(1.2);
+}
+
+[data-theme="dark"] .header__theme-icon {
+  color: #f5f5f5;
 }
 
 /* Estilos para modo oscuro */
