--- a/src/components/Btn/Btn.css
+++ b/src/components/Btn/Btn.css
@@ -10,6 +10,8 @@
   transition: background-color 0.3s ease, transform 0.2s ease;
   user-select: none;
   border-radius: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .btn-comp:hover {
