--- a/src/components/FormUserData/FormUserData.css
+++ b/src/components/FormUserData/FormUserData.css
@@ -28,6 +28,7 @@
   align-items: center;
   background-color: #f2e2d9;
   border-radius: 15px;
+  min-width: 600px;
   max-width: 1200px;
   width: 90%;
   padding: 2rem;
@@ -40,7 +41,7 @@
 .form-block h2 {
   margin-bottom: 1rem;
   margin-top: 0;
-  font-size: 36px;
+  font-size: 30px;
 }
 
 .error {
@@ -50,6 +51,7 @@
   height: 20px;
   font-size: 18px;
   color: #ef5660;
+  margin-top: 4px;
 }
 
 .form {
@@ -61,9 +63,8 @@
 
 .form label {
   margin-bottom: 10px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 5px;
+  display: flex;
+  flex-direction: column;
 }
 
 .form textarea {
@@ -114,7 +115,4 @@
     width: 90%;
   }
 
-  .form-block {
-    padding-top: 100px; /* más espacio si la imagen se superpone más */
-  }
 }
